# debater

./: .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  google_search_technique.txt  pyproject.toml  ruff.toml  temp.py
.devcontainer/: Dockerfile  devcontainer.json
src/constants/: model_description.py
src/graph/: compiled_graph.py  debater.py  prepare.py  reflection.py  search.py  search_2.py  test_compiled_graph.py
src/graph/debater/: compiled_graph.py  debater.py  prepare.py  search.py
src/graph/topic_provider/: choose_topic.py  compiled_graph.py
src/llm/: gemini.py
src/model/: article.py
src/model/state/: debater.py  over_all.py  prepare.py  reflection.py  role.py  search.py
src/repository/: article.py  article_raw_data.py  crawl.py  google_search.py
